Adding the map permission for the phone in the MApActivity class